# PhysicsSandbox

./: .gitignore  CMakeLists.txt  README.md  SkiaQuickItem.cpp  SkiaQuickItem.h  StarQuickItem.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  physworldview.cpp  physworldview.h  physworldview_gl_quick.cpp  physworldview_gl_quick.h  physworldview_original.cpp  physworldview_original.h  physworldview_skia_quickitem.cpp  physworldview_skia_quickitem.h  physworldview_vulkan.cpp  physworldview_vulkan.h  skia_quick_item.cpp  skia_quick_item.h  star_quick_item.h
android/: AndroidManifest.xml
